minor versions bump; engine less strict (major version)
react-virtualized is now compatible with React 18

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@devstronomy/frontend",
-  "version": "0.4.0-alpha.2",
+  "version": "0.5.0",
   "description": "This project contains the code-base for the frontend part of Devstronomy project.",
   "license": "MIT",
   "homepage": "https://devstronomy.com",
@@ -29,59 +29,59 @@
     "prettier:fix": "prettier -w src && prettier-package-json --write ./package.json"
   },
   "dependencies": {
-    "@devstronomy/celestial": "0.4.1",
-    "@mui/icons-material": "5.10.16",
-    "@mui/material": "5.10.16",
-    "@mui/styled-engine-sc": "5.10.16",
-    "@mui/system": "5.10.16",
+    "@devstronomy/celestial": "0.5.0",
+    "@mui/icons-material": "5.14.1",
+    "@mui/material": "5.14.1",
+    "@mui/styled-engine-sc": "5.12.0",
+    "@mui/system": "5.14.1",
     "lodash": "4.17.21",
     "polished": "4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.0.5",
-    "react-router-dom": "6.4.3",
+    "react-redux": "8.1.1",
+    "react-router-dom": "6.14.2",
     "react-router-hash-link": "2.4.3",
-    "react-virtualized": "9.22.3",
-    "redux": "4.2.0",
-    "redux-saga": "1.2.1",
-    "styled-components": "5.3.6"
+    "react-virtualized": "9.22.5",
+    "redux": "4.2.1",
+    "redux-saga": "1.2.3",
+    "styled-components": "5.3.11"
   },
   "devDependencies": {
-    "@devstronomy/dev-dependencies": "0.3.2",
-    "@testing-library/jest-dom": "5.16.5",
+    "@devstronomy/dev-dependencies": "file:../dev-dependencies/devstronomy-dev-dependencies-0.3.3-alpha.1.tgz",
+    "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/lodash": "4.14.190",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@types/react-redux": "7.1.24",
-    "@types/react-router": "5.1.19",
+    "@types/lodash": "4.14.195",
+    "@types/node": "18.17.0",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@types/react-redux": "7.1.25",
+    "@types/react-router": "5.1.20",
     "@types/react-router-dom": "5.3.3",
-    "@types/react-router-hash-link": "2.4.5",
-    "@types/react-virtualized": "9.21.21",
+    "@types/react-router-hash-link": "2.4.6",
+    "@types/react-virtualized": "9.21.22",
     "@types/styled-components": "5.1.26",
-    "@types/webpack": "5.28.0",
+    "@types/webpack": "5.28.1",
     "@types/webpack-dev-server": "4.7.1",
     "babel-eslint": "10.1.0",
-    "babel-plugin-styled-components": "2.0.7",
+    "babel-plugin-styled-components": "2.1.4",
     "copy-webpack-plugin": "11.0.0",
-    "css-loader": "6.7.2",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
+    "css-loader": "6.8.1",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jest-dom": "4.0.3",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react": "7.33.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "4.0.0",
-    "html-webpack-plugin": "5.5.0",
-    "jest-environment-jsdom": "29.3.1",
+    "html-webpack-plugin": "5.5.3",
+    "jest-environment-jsdom": "29.6.1",
     "json5-loader": "4.0.1",
-    "mini-css-extract-plugin": "2.7.0",
+    "mini-css-extract-plugin": "2.7.6",
     "rimraf": "3.0.2",
-    "style-loader": "3.3.1"
+    "style-loader": "3.3.3"
   },
   "keywords": [
     "apollo",
@@ -92,8 +92,8 @@
     "solar-system"
   ],
   "engines": {
-    "node": "18.2.0",
-    "npm": "8.9.0"
+    "node": "^18",
+    "npm": "^9"
   },
   "browserslist": [
     "defaults"
